<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainTheme"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RecycleResultScreen">

    <!-- Header TextView -->
    <TextView
        android:id="@+id/resultHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/recyclable"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- User Picture ImageView -->
    <ImageView
        android:id="@+id/userPic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/plastic" />

    <!-- Instruction TextView -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/instruction2" />

    <!-- Google Maps TextView -->
    <TextView
        android:id="@+id/googleMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/gMapsUI"
        android:textColor="@color/custom_blue" />

    <!-- Camera Button -->

    <!-- Logout Button -->
    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:background="#EDE8D0"
        android:contentDescription="@string/camera_button_description"
        app:srcCompat="@drawable/camera" />

</LinearLayout>
